lintian-brush (0.88) UNRELEASED; urgency=medium

  * Add fixer for public-upstream-key-in-native-package.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 29 Nov 2020 14:57:07 +0000

lintian-brush (0.87) unstable; urgency=medium

  * Cope with empty watch files. Closes: #974958
  * Add fixer for malformed-override.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 19 Nov 2020 00:19:01 +0000

lintian-brush (0.86) unstable; urgency=medium

  * Hide fixer for upstream-metadata-in-native-source behind --
    opinionated.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 10 Nov 2020 16:32:53 +0000

lintian-brush (0.85) unstable; urgency=medium

  * Add fixer debian-watch-file-old-format.
  * Don't remove unused overrides for the rc-version-greater-than-
    expected-version tag, which is intermittent.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 07 Nov 2020 04:35:06 +0000

lintian-brush (0.84) unstable; urgency=medium

  * Avoid loading overrides multiple times, handle renamed tags in
    overrides.
  * Don't remove the Testsuite header for packages compatible with dpkg
    < 1.17.1.
  * Automate updating of information about key packages in different
    releases.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 01 Nov 2020 17:41:16 +0000

lintian-brush (0.83) unstable; urgency=medium

  * Add guide on writing fixers to doc/.
  * Add fixer for newer-debconf-template - disabled for now.
  * Add fixer for field-name-typo-in-tests-control.
  * Set Security-Contact in debian/upstream/metadata when SECURITY.md is
    present.
  * apply-multiarch-hints: Fix typo in commit message: s/:all/:any/.
  * Require at least gpg 2.1, for import-export support.
  * Use --armor rather than --enarmor when converting signing-key.pgp
    files to signing-key.asc files. Thanks, Simon Josefsson, for
    reporting.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 29 Oct 2020 20:40:30 +0000

lintian-brush (0.82) unstable; urgency=medium

  * pkg-perl-vcs: Add fixer for team/pkg-perl/vcs/no-team-url and