@@ -1,6 +1,9 @@
 lintian-brush (0.88) UNRELEASED; urgency=medium
 
   * Add fixer for public-upstream-key-in-native-package.
+  * Add fixers for setting pgpsigurlmangle and creating
+    debian/upstream/signing-key.asc. This effectively does TOFY -
+    it'll at least allow catching of changes in the signing key in the future.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 29 Nov 2020 14:57:07 +0000
 
